--- a/index.html
+++ b/index.html
@@ -5,9 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
     <title>myPortfolio</title>
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#project">Project</a></li>
+            <li><a href="#about">About</a></li>
+        </ul>
+    </nav>
+<h1>Welcome to myPortfolio</h1>
+<div class="hero">
+    <div class="hero-img-box">
+        <img class="hero-img" src="/ressoures/img/IMG_2029.PNG" alt="my Memoji">
+    </div>
+    <div class="about-me">
+        <h2>About Me</h2>
+        <p>Hier steht demnächst der About me Text</p>
+    </div>
+</div>
+
+    <footer>
+        Made with Code in Hamburg by
+        <span class="owner-footer">Hannes Bauer</span>
+    </footer>
 </body>
 </html>
