--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <h1>Welcome to myPortfolio</h1>
 <div class="hero">
     <div class="hero-img-box">
-        <img class="hero-img" src="/ressoures/img/IMG_2029.PNG" alt="my Memoji">
+        <img class="hero-img" src="ressoures/img/IMG_2029.PNG" alt="my Memoji">
     </div>
     <div class="about-me">
         <h2>About Me</h2>
