--- a/index.html
+++ b/index.html
@@ -23,13 +23,25 @@
     </div>
     <div class="about-me">
         <h2>About Me</h2>
-        <p>Hier steht demnächst der About me Text</p>
-    </div>
+        <p>H i !</p>
+        <p>My Name is Hannes.</p>
+        <p>I am 26 Years old and learn actually the FullStackPath on CodeCademy.</p>
+        <p>At the Moment i learn the basics of modern Web-Development</p>
+        <h2>Here can you see my Skillset:</h2>
+    
+
+<div class="project">
+<h2>Project</h2>
+<div class="project-one">
+    <p>Here you can see the first Project</p>
+</div>
 </div>
 
+  
     <footer>
         Made with Code in Hamburg by
         <span class="owner-footer">Hannes Bauer</span>
+        <p class="copyright">myPortfolio © 2022</p>
     </footer>
 </body>
 </html>
