--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <img src="ressoures/img/IMG_2029.PNG" class="logo">
           
             <a href="#contact">Contact</a>
-            <a href="#contact">Project</a>
-            <a href="#about">About</a>
+            <a href="#project">Project</a>
+            <a href="#about-me">About</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="fa fa-bars"></i>
             </a>
