--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         </div>
         <ul class="nav-list" id="navList">
             <li class="list-item">
-                <a href="#">About</a>
+                <a href="about-me">About</a>
             </li>
             <li class="list-item">
-                <a href="#">Project</a>
+                <a href="row-project">Project</a>
             </li>
             <li class="list-item">
                 <a href="#">Contact</a>
