--- a/index.html
+++ b/index.html
@@ -12,33 +12,23 @@
 </head>
 <body>
 <!-- new Navbar with Logo and Burger Menu here -->
-    <nav class="navbar">
-        <div class="logo-div">
-            <a href="">
-                <img class="logo" src="ressoures/img/logo_hnsb.png" alt="logo Website">
-            </a>
-        </div>
-        <ul class="nav-list" id="navList">
-            <li class="list-item">
-                <a href="about-me">About</a>
-            </li>
-            <li class="list-item">
-                <a href="row-project">Project</a>
-            </li>
-            <li class="list-item">
-                <a href="#">Contact</a>
-            </li>
-        </ul>
-        <div class="menu" id="toogle-button">
-            <div class="menu-line"></div>
-            <div class="menu-line"></div>
-            <div class="menu-line"></div>
-            </div>
-        </div>
-    </nav>
+ <div class="hero">
+     <nav class ="nav-bar" id="navbar">
+        <img src="/ressoures/img/graph_neu.png" class="logo">
+         <ul>
+             <li><a href="">About</a></li>
+             <li><a href="">Project</a></li>
+             <li><a href="">Contact</a></li>
+         </ul>
+         <img src="ressoures/img/sun.png" id="moon-icon">
+         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+          </a>
+     </nav>
+ </div>
 
    
-<div class="hero">
+<div class="hero-me">
     <h1>HI, I'am <span>Hannes</span></h1>
         <p>This is myPortfolio Website
         <br> enjoy my work
@@ -46,7 +36,7 @@
     <a href="#">Contact Me</a>
 </div>
 
-<div class="images">
+ <div class="images">
     <img src="ressoures/img/graph_neu.png" class="shape">
     <img src="ressoures/img/IMG_2029.PNG" class="Memoji">
 </div>
