--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!-- new Navbar with Logo and Burger Menu here -->
  <div class="hero">
      <nav class ="nav-bar" id="navbar">
-        <img src="/ressoures/img/graph_neu.png" class="logo">
+        <img src="ressoures/img/graph_neu.png" class="logo">
          <ul>
              <li><a href="">About</a></li>
              <li><a href="">Project</a></li>
