--- a/index.html
+++ b/index.html
@@ -14,16 +14,14 @@
 <!-- new Navbar with Logo and Burger Menu here -->
  <div class="hero">
      <nav class ="nav-bar" id="navbar">
-        <img src="/ressoures/img/graph_neu.png" class="logo">
+        <a href=""><img src="/ressoures/img/graph_neu.png" class="logo"></a>
          <ul>
              <li><a href="">About</a></li>
              <li><a href="">Project</a></li>
              <li><a href="">Contact</a></li>
          </ul>
          <img src="ressoures/img/sun.png" id="moon-icon">
-         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-          </a>
+        
      </nav>
  </div>
 
@@ -36,10 +34,7 @@
     <a href="#">Contact Me</a>
 </div>
 
- <div class="images">
-    <img src="ressoures/img/graph_neu.png" class="shape">
-    <img src="ressoures/img/IMG_2029.PNG" class="Memoji">
-</div>
+
 <br>
 <br>
 <br>
