--- a/index.html
+++ b/index.html
@@ -69,8 +69,38 @@
                 <p>At the Moment i learn the basics of modern Web-Development</p>
             </div>
         </div>
-       <!-- 
+      
     </div>
+<!-- new Skillbar here -->
+<div class="skills">
+    <div class="skill">
+        <div class="skill-name">HMTL 5</div>
+        <div class="skill-bar">
+        <div class="skill-per" per="60%" style="max-width: 60%"></div>
+        </div>
+    </div>
+    <div class="skill">
+        <div class="skill-name">CSS 3</div>
+        <div class="skill-bar">
+        <div class="skill-per" per="50%" style="max-width: 50%"></div>
+        </div>
+    </div>
+    <div class="skill">
+        <div class="skill-name">Javascript</div>
+        <div class="skill-bar">
+        <div class="skill-per" per="40%"style="max-width: 30%"></div>
+        </div>
+    </div>
+    <div class="skill">
+        <div class="skill-name">React</div>
+        <div class="skill-bar">
+        <div class="skill-per" per="10%" style="max-width: 10%"></div>
+        </div>
+    </div>
+</div>
+
+
+     <!-- 
         <div class="row">
             <h2>My Skillset:</h2>
             <div class="column">
